<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Herois">

    <EditText
        android:id="@+id/etVulneb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txVulneb"
        app:layout_constraintTop_toBottomOf="@+id/txVulneb"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hnome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/txCodn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hcodinome"
        app:layout_constraintEnd_toEndOf="@+id/txNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txNome"
        app:layout_constraintTop_toBottomOf="@+id/txNome" />

    <TextView
        android:id="@+id/txEspec"
        android:layout_width="57dp"
        android:layout_height="21dp"
        android:layout_marginTop="56dp"
        android:text="@string/hesp_cie"
        app:layout_constraintEnd_toEndOf="@+id/txCodn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txCodn"
        app:layout_constraintTop_toBottomOf="@+id/txCodn" />

    <TextView
        android:id="@+id/txHab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hhabilidades"
        app:layout_constraintEnd_toEndOf="@+id/txEspec"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txEspec"
        app:layout_constraintTop_toBottomOf="@+id/txEspec" />

    <TextView
        android:id="@+id/txVulneb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hvulnerabilidades"
        app:layout_constraintEnd_toEndOf="@+id/txHab"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txHab"
        app:layout_constraintTop_toBottomOf="@+id/txHab" />

    <TextView
        android:id="@+id/txNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hn_vel_de_acesso"
        app:layout_constraintEnd_toEndOf="@+id/txVulneb"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txVulneb"
        app:layout_constraintTop_toBottomOf="@+id/txVulneb" />

    <TextView
        android:id="@+id/txEquip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hequipamentos"
        app:layout_constraintEnd_toEndOf="@+id/txNivel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txNivel"
        app:layout_constraintTop_toBottomOf="@+id/txNivel" />

    <TextView
        android:id="@+id/txDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hdescri_o_dos_equipamentos"
        app:layout_constraintEnd_toEndOf="@+id/txEquip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txEquip"
        app:layout_constraintTop_toBottomOf="@+id/txEquip" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txNome"
        app:layout_constraintTop_toBottomOf="@+id/txNome"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txCodn"
        app:layout_constraintTop_toBottomOf="@+id/txCodn"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etEspec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txEspec"
        app:layout_constraintTop_toBottomOf="@+id/txEspec"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etHab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txHab"
        app:layout_constraintTop_toBottomOf="@+id/txHab"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txNivel"
        app:layout_constraintTop_toBottomOf="@+id/txNivel"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etEquip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txEquip"
        app:layout_constraintTop_toBottomOf="@+id/txEquip"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txDesc"
        app:layout_constraintTop_toBottomOf="@+id/txDesc"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Cadastrar"
        android:text="@string/hcadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />
</androidx.constraintlayout.widget.ConstraintLayout>